--- a/arturito/package.json
+++ b/arturito/package.json
@@ -29,7 +29,7 @@
     ]
   },
   "dependencies": {
-    "@craco/craco": "^6.2.0",
+    "@craco/craco": "^5.9.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -42,7 +42,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "swr": "^0.5.6",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -50,9 +50,9 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/react-router-dom": "^5.1.8",
-    "autoprefixer": "^9",
+    "autoprefixer": "^10.4.2",
     "eslint-config-prettier": "8.3.0",
-    "postcss": "^7",
+    "postcss": "^5.0.0",
     "prettier": "2.3.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
